--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
-name = "pyreturns"
+name = "python"
 version = "0.1.0"
 description = ""
 authors = ["Damien Toma <damientoma.pro@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-jupyter = "^1.0"
-pandas = "^0.24.2"
-matplotlib = "^3.0"
-pandas-datareader = "^0.7.0"
+python = "^3.7"
+hypothesis = "^4.56"
+mypy = "^0.761.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+black = {version = "^18.3-alpha.0", allows-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
